...
    android:id="@+id/TaskDetailHeading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetailActivity">

    <TextView
        android:id="@+id/TaskDetailPageHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/TaskDetailPageHeading"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TaskDetailPageTexts"
        android:layout_width="247dp"
        android:layout_height="344dp"
        android:layout_marginTop="40dp"
        android:text="@string/TaskDetailPageText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
...
